[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram-litellm"
version = "0.1.0"
description = "Stateful Mamba inference provider for LiteLLM, powered by Engram"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Clarit AI", email = "hello@clarit.ai" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.24.0",
    "litellm>=1.0.0",
]

[project.optional-dependencies]
tokenizer = ["transformers>=4.30.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/Clarit-AI/Engram-LiteLLM-Provider"
Repository = "https://github.com/Clarit-AI/Engram-LiteLLM-Provider"
Issues = "https://github.com/Clarit-AI/Engram-LiteLLM-Provider/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
